Fix chat overflowing

--- a/src/pages/room/Room.module.scss
+++ b/src/pages/room/Room.module.scss
@@ -1,20 +1,20 @@
 @import "../../vars";
 
 .room {
-    display: grid;
+    display: flex;
     height: calc(100vh - $nav-height);
-    grid-template-columns: minmax(0, 3fr) 1fr;
     max-width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .game {
+    flex: 3;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
+    width: calc(100vw - 20rem);
 }
 
 .board {
@@ -25,21 +25,25 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .chat {
     background-color: #0004;
-    min-width: 10rem;
+    width: 20rem;
     display: flex;
     flex-direction: column;
     .chatInput {
         margin-top: auto;
         input {
             width: 100%;
+            background-color: #0004;
         }
-    };
+    }
 
     .chatMessages {
+        padding: 0 1rem;
+        padding-top: 0.5rem;
         overflow-y: auto;
         word-break: break-all;
     }
